# digidub

./: .gitignore  CMakeLists.txt  Create-Package.ps1.in  README.md  digidub.rc  digimon-season-1.txt
cli/: main.cpp
editor/: appsettingkeys.h  appsettings.cpp  appsettings.h  commands.cpp  commands.h  digidub.qrc  main.cpp  matcheditorwidget.cpp  matcheditorwidget.h  matchlistwindow.cpp  matchlistwindow.h  videoplayerwidget.cpp  videoplayerwidget.h  window.cpp  window.h
editor/widgets/: playerbar.cpp  playerbar.h  playerbutton.cpp  playerbutton.h  waveformviewer.cpp  waveformviewer.h
lib/: blackdetectthread.cpp  blackdetectthread.h  cache.cpp  cache.h  exerun.cpp  exerun.h  exporter.cpp  exporter.h  frameextractionthread.cpp  frameextractionthread.h  match.h  matchalgo.cpp  matchalgo.h  mediainfo.h  mediaobject.cpp  mediaobject.h  phash.cpp  phash.h  project.cpp  project.h  scdetthread.cpp  scdetthread.h  silencedetectthread.cpp  silencedetectthread.h  timesegment.cpp  timesegment.h  vfparser.cpp  vfparser.h  wav.cpp  wav.h
src/: digidub.cpp  phash.cpp  phash.h
tutoriel/: 1.txt  README.md
